<resources>
    <string name="app_name">GeoJob</string>
    <string name="WelcomeActivity_SelectRoute">Select Route</string>
    <string name="WelcomeActivity_SelectLanguage">Select Language</string>
    <string name="Common_HistoricKilometer">Historic Kilometer</string>
    <string name="Common_BlindWalls">Blind Walls</string>
    <string name="Common_BackButton">Back</string>
    <string name="ChooseRouteActivity_Search">Search</string>
    <string name="SettingsActivity_ChooseLanguage">Choose Language</string>
    <string name="SettingsActivity_ShowNotifications">Show Notifications</string>
    <string name="Common_Breda2017">Breda 2017</string>
    <string name="Common_CityGuide">City Guide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="NavigateActivity_ResumeRoute">Stop Route</string>
    <string name="HelpActivity_helpText">This application provides a virtual guide through the most beautiful city of the Netherlands.\nThis application needs certain permissions to work correctly, you will be asked about this.</string>
    <string name="DetailRouteActivity_StartRouteButton">Start route</string>
    <string name="DetailRouteActivity_PDBTitle">This route has the followings points:</string>
    <string name="historischeKilometer">Historic Kilometer</string>
    <string name="title_activity_navigate">Map</string>
    <string name="hello_blank_fragment">Map</string>
    <string name="BlindWalls_walkType">walk</string>
    <string name="BlindWalls_bikeType">bike</string>
    <string name="Common_artist">Artist:</string>
    <string name="Common_photographer">Photographer:</string>
    <string name="Common_material">Material:</string>
    <string name="Error_title">An error occured</string>
    <string name="Error_noGPS">No GPS signal, please turn on GPS</string>
    <string name="Common_ok">Ok</string>
    <string name="Common_origin">Origin</string>
    <string name="Common_noConnection">No connection</string>
    <string name="title_activity_poi_tester">PoiTester</string>
    <string name="Location_word">Location</string>
    <string name="Year_word">Year</string>
    <string name="Photographer_word">Photographer</string>
    <string name="exit_navigate_activity_tile">Do you want to exist?</string>
    <string name="exit_navigate_activity_positive">Ok</string>
    <string name="exit_navigate_cancel">Cancel</string>
    <string name="navigate_exit_route">Warning you are exiting the route</string>

    <string name="No_internetConnection">No internet connection available, please check your internet connection</string>

    <string name="Common_notify_enabled">Notifications enabled</string>
    <string name="Common_notify_disabled">Notifications disabled</string>

    <string name="navitgate_activity_gps_not_enabled">No GPS available please turn GPS on.</string>
</resources>
