<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.thijswijnen.geojob.UI.DetailRouteActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/standard_standard_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.Guideline
            android:id="@+id/standard_gdlnVVVLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17"/>

        <android.support.constraint.Guideline
            android:id="@+id/standard_gdlnLeftbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"/>

        <ImageView
            android:id="@+id/standard_background_imgvw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/standard_gdlnLeftbar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorBackground"/>

        <ImageView
            android:id="@+id/standard_leftBar_imgvw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/standard_gdlnLeftbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorLeftRed"/>

        <ImageView
            android:id="@+id/standard_VVVLogo_imgvw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/standard_gdlnVVVLogo"
            app:layout_constraintEnd_toStartOf="@+id/standard_gdlnLeftbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vvvlogo"/>

        <ImageView
            android:id="@+id/standard_dutchFlag_imgvw"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/standard_BritishFlag_imgvw"
            app:layout_constraintEnd_toStartOf="@+id/standard_BritishFlag_imgvw"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dutchflagicon"/>

        <ImageView
            android:id="@+id/standard_BritishFlag_imgvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ukflagicon"/>

        <TextView
            android:id="@+id/standard_Breda2017_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/Common_Breda2017"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/standard_gdlnLeftbar"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/standard_cityguide_txtvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/Common_CityGuide"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/standard_gdlnLeftbar"
            app:layout_constraintTop_toBottomOf="@+id/standard_Breda2017_txtvw"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/detailRoute_detailRoute_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.Guideline
            android:id="@+id/standard_gdlnLeftbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"/>

        <android.support.constraint.Guideline
            android:id="@+id/standard_gdlnVVVLogo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17"/>

        <TextView
            android:id="@+id/RouteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="-RouteTitle-"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/standard_gdlnLeftbar2"
            app:layout_constraintTop_toTopOf="@+id/standard_gdlnVVVLogo2"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45"/>

        <ScrollView
            android:id="@+id/ShortDescriptionBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scrollbarStyle="insideOverlay"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/standard_gdlnLeftbar2"
            app:layout_constraintTop_toBottomOf="@+id/RouteTitle">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/PointsDescriptionBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/StartRouteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/standard_gdlnLeftbar2"
            app:layout_constraintTop_toBottomOf="@+id/PointsDescriptionBoxTitle">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/StartRouteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorButtons"
            android:text="@string/DetailRouteActivity_StartRouteButton"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/standard_gdlnLeftbar2"/>

        <TextView
            android:id="@+id/PointsDescriptionBoxTitle"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/DetailRouteActivity_PDBTitle"
            app:layout_constraintBottom_toTopOf="@+id/PointsDescriptionBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/standard_gdlnLeftbar2"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.053"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
